Crystal 8/ProgramF/SEAGAT~1/CRW/DEV/include/crpe.h

#define PE_ERR_NOTENOUGHMEMORY              500
#define PE_ERR_INVALIDJOBNO                 501
#define PE_ERR_INVALIDHANDLE                502
#define PE_ERR_STRINGTOOLONG                503
#define PE_ERR_NOSUCHREPORT                 504
#define PE_ERR_NODESTINATION                505
#define PE_ERR_BADFILENUMBER                506
#define PE_ERR_BADFILENAME                  507
#define PE_ERR_BADFIELDNUMBER               508
#define PE_ERR_BADFIELDNAME                 509
#define PE_ERR_BADFORMULANAME               510
#define PE_ERR_BADSORTDIRECTION             511
#define PE_ERR_ENGINENOTOPEN                512
#define PE_ERR_INVALIDPRINTER               513
#define PE_ERR_PRINTFILEEXISTS              514
#define PE_ERR_BADFORMULATEXT               515
#define PE_ERR_BADGROUPSECTION              516
#define PE_ERR_ENGINEBUSY                   517
#define PE_ERR_BADSECTION                   518
#define PE_ERR_NOPRINTWINDOW                519
#define PE_ERR_JOBALREADYSTARTED            520
#define PE_ERR_BADSUMMARYFIELD              521
#define PE_ERR_NOTENOUGHSYSRES              522
#define PE_ERR_BADGROUPCONDITION            523
#define PE_ERR_JOBBUSY                      524
#define PE_ERR_BADREPORTFILE                525
#define PE_ERR_NODEFAULTPRINTER             526
#define PE_ERR_SQLSERVERERROR               527
#define PE_ERR_BADLINENUMBER                528
#define PE_ERR_DISKFULL                     529
#define PE_ERR_FILEERROR                    530
#define PE_ERR_INCORRECTPASSWORD            531
#define PE_ERR_BADDATABASEDLL               532
#define PE_ERR_BADDATABASEFILE              533
#define PE_ERR_ERRORINDATABASEDLL           534
#define PE_ERR_DATABASESESSION              535
#define PE_ERR_DATABASELOGON                536
#define PE_ERR_DATABASELOCATION             537
#define PE_ERR_BADSTRUCTSIZE                538
#define PE_ERR_BADDATE                      539
#define PE_ERR_BADEXPORTDLL                 540
#define PE_ERR_ERRORINEXPORTDLL             541
#define PE_ERR_PREVATFIRSTPAGE              542
#define PE_ERR_NEXTATLASTPAGE               543
#define PE_ERR_CANNOTACCESSREPORT           544
#define PE_ERR_USERCANCELLED                545
#define PE_ERR_OLE2NOTLOADED                546
#define PE_ERR_BADCROSSTABGROUP             547
#define PE_ERR_NOCTSUMMARIZEDFIELD          548
#define PE_ERR_DESTINATIONNOTEXPORT         549
#define PE_ERR_INVALIDPAGENUMBER            550
#define PE_ERR_NOTSTOREDPROCEDURE           552
#define PE_ERR_INVALIDPARAMETER             553
#define PE_ERR_GRAPHNOTFOUND                554
#define PE_ERR_INVALIDGRAPHTYPE             555
#define PE_ERR_INVALIDGRAPHDATA             556
#define PE_ERR_CANNOTMOVEGRAPH              557
#define PE_ERR_INVALIDGRAPHTEXT             558
#define PE_ERR_INVALIDGRAPHOPT              559
#define PE_ERR_BADSECTIONHEIGHT             560
#define PE_ERR_BADVALUETYPE                 561
#define PE_ERR_INVALIDSUBREPORTNAME         562
#define PE_ERR_NOPARENTWINDOW               564 
#define PE_ERR_INVALIDZOOMFACTOR            565 
#define PE_ERR_PAGESIZEOVERFLOW             567
#define PE_ERR_LOWSYSTEMRESOURCES           568
#define PE_ERR_BADGROUPNUMBER               570
#define PE_ERR_INVALIDOBJECTFORMATNAME      571
#define PE_ERR_INVALIDNEGATIVEVALUE         572
#define PE_ERR_INVALIDMEMORYPOINTER         573
#define PE_ERR_INVALIDOBJECTTYPE            574
#define PE_ERR_INVALIDGRAPHDATATYPE         577
#define PE_ERR_INVALIDSUBREPORTLINKNUMBER   582
#define PE_ERR_SUBREPORTLINKEXIST           583
#define PE_ERR_BADROWCOLVALUE               584
#define PE_ERR_INVALIDSUMMARYNUMBER         585
#define PE_ERR_INVALIDGRAPHDATAFIELDNUMBER  586
#define PE_ERR_INVALIDSUBREPORTNUMBER       587
#define PE_ERR_INVALIDFIELDSCOPE            588
#define PE_ERR_FIELDINUSE                   590
#define PE_ERR_INVALIDPARAMETERNUMBER       594
#define PE_ERR_INVALIDPAGEMARGINS           595
#define PE_ERR_REPORTONSECUREQUERY          596
#define PE_ERR_CANNOTOPENSECUREQUERY        597
#define PE_ERR_INVALIDSECTIONNUMBER         598
#define PE_ERR_SQLSERVERNOTOPENED           599
#define PE_ERR_TABLENAMEEXIST               606
#define PE_ERR_INVALIDCURSOR                607
#define PE_ERR_FIRSTPASSNOTFINISHED         608
#define PE_ERR_CREATEDATASOURCE             609
#define PE_ERR_CREATEDRILLDOWNPARAMETERS    610
#define PE_ERR_CHECKFORDATASOURCECHANGES    613
#define PE_ERR_STARTBACKGROUNDPROCESSING    614
#define PE_ERR_SQLSERVERINUSE               619
#define PE_ERR_GROUPSORTFIELDNOTSET         620
#define PE_ERR_CANNOTSETSAVESUMMARIES       621
#define PE_ERR_LOADOLAPDATABASEMANAGER      622
#define PE_ERR_OPENOLAPCUBE                 623
#define PE_ERR_READOLAPCUBEDATA             624
#define PE_ERR_CANNOTSAVEQUERY              626
#define PE_ERR_CANNOTREADQUERYDATA          627
#define PE_ERR_MAINREPORTFIELDLINKED        629
#define PE_ERR_INVALIDMAPPINGTYPEVALUE      630
#define PE_ERR_HITTESTFAILED                636
#define PE_ERR_BADSQLEXPRESSIONNAME         637 
#define PE_ERR_BADSQLEXPRESSIONNUMBER       638 
#define PE_ERR_BADSQLEXPRESSIONTEXT         639 
#define PE_ERR_INVALIDDEFAULTVALUEINDEX     641 
#define PE_ERR_NOMINMAXVALUE                642 
#define PE_ERR_INCONSISTANTTYPES            643 
#define PE_ERR_CANNOTLINKTABLES             645
#define PE_ERR_CREATEROUTER                 646
#define PE_ERR_INVALIDFIELDINDEX            647
#define PE_ERR_INVALIDGRAPHTITLETYPE        648
#define PE_ERR_INVALIDGRAPHTITLEFONTTYPE    649
#define PE_ERR_PARAMTYPEDIFFERENT           650 
#define PE_ERR_INCONSISTANTRANGETYPES       651 
#define PE_ERR_RANGEORDISCRETE              652 
#define PE_ERR_NOTMAINREPORT                654 
#define PE_ERR_INVALIDCURRENTVALUEINDEX     655 
#define PE_ERR_LINKEDPARAMVALUE             656 
#define PE_ERR_INVALIDPARAMETERRANGEINFO    672 
#define PE_ERR_INVALIDSORTMETHODINDEX       674 
#define PE_ERR_INVALIDGRAPHSUBTYPE          675 
#define PE_ERR_BADGRAPHOPTIONINFO           676 
#define PE_ERR_BADGRAPHAXISINFO             677 
#define PE_ERR_NOTEXTERNALSUBREPORT         680 
#define PE_ERR_INVALIDPARAMETERVALUE        687
#define PE_ERR_INVALIDFORMULASYNTAXTYPE     688 
#define PE_ERR_INVALIDCROPVALUE             689
#define PE_ERR_INVALIDCOLLATIONVALUE        690
#define PE_ERR_STARTPAGEGREATERSTOPPAGE     691
#define PE_ERR_INVALIDEXPORTFORMAT		    692
#define PE_ERR_OTHERERROR                   997
#define PE_ERR_INTERNALERROR                998 
#define PE_ERR_NOTIMPLEMENTED               999
#define PE_UNCHANGED       -1
BOOL CRPE_API PEOpenEngine (void);
void CRPE_API PECloseEngine (void);
BOOL CRPE_API PECanCloseEngine (void);
#define PE_GV_DLL     100
#define PE_GV_ENGINE  200
short CRPE_API PEGetVersion (short versionRequested);
short CRPE_API PEPrintReport (const char FAR *reportFilePath,
                              BOOL toDefaultPrinter,
                              BOOL toWindow,
                              const char FAR *title,
                              int left,
                              int top,
                              int width,
                              int height,
                              DWORD style,
                              HWND parentWindow);
#define PE_RPTOPT_CVTDATETIMETOSTR  0
#define PE_RPTOPT_CVTDATETIMETODATE 1
#define PE_RPTOPT_KEEPDATETIMETYPE  2
#define PE_RPTOPT_PROMPT_NONE 0
#define PE_RPTOPT_PROMPT_NORMAL 1
#define PE_RPTOPT_PROMPT_ALWAYS 2
typedef struct PEReportOptions
{
    WORD StructSize;  
    short saveDataWithReport;  
    short saveSummariesWithReport;  
    short useIndexForSpeed;    
    short translateDOSStrings; 
    short translateDOSMemos;   
    short convertDateTimeType; 
    short convertNullFieldToDefault; 
    short morePrintEngineErrorMessages;
    short caseInsensitiveSQLData; 
    short verifyOnEveryPrint;     
    short zoomMode;                
    short hasGroupTree;           
    short dontGenerateDataForHiddenObjects; 
    short performGroupingOnServer;           
	short doAsyncQuery; 
    short promptMode; 
    short selectDistinctRecords; 
}PEReportOptions;
#define PE_SIZEOF_REPORT_OPTIONS (sizeof(PEReportOptions))
BOOL CRPE_API PEGetReportOptions (short printJob,
                                  PEReportOptions FAR * reportOptions);
BOOL CRPE_API PESetReportOptions (short printJob,
                                  PEReportOptions FAR * reportOptions);
short CRPE_API PEOpenPrintJob (const char FAR *reportFilePath);
BOOL CRPE_API PEClosePrintJob (short printJob);
BOOL CRPE_API PEStartPrintJob (short printJob,
                               BOOL waitUntilDone);
void CRPE_API PECancelPrintJob (short printJob);
BOOL CRPE_API PEIsPrintJobFinished (short printJob);
typedef struct PEGraphOptionInfo
{
    WORD StructSize;
    short graphColour; 
    short showLegend; 
    short legendPosition; 
    short pieSize; 
    short detachedPieSlice; 
    short barSize; 
    short verticalBars; 
    short markerSize; 
    short markerShape; 
    short dataPoints; 
    short dataValueNumberFormat; 
    short viewingAngle; 
    short legendLayout;     
} PEGraphOptionInfo;
typedef struct PEGraphAxisInfo
{
    WORD StructSize;
    short groupAxisGridLine; 
    short dataAxisYGridLine; 
    short dataAxisY2GridLine; 
    short seriesAxisGridline; 
    double dataAxisYMinValue;
    double dataAxisYMaxValue;
    double dataAxisY2MinValue;
    double dataAxisY2MaxValue;
    double seriesAxisMinValue;
    double seriesAxisMaxValue;
    short dataAxisYNumberFormat; 
    short dataAxisY2NumberFormat; 
    short seriesAxisNumberFormat; 
    short dataAxisYAutoRange; 
    short dataAxisY2AutoRange; 
    short seriesAxisAutoRange; 
    short dataAxisYAutomaticDivision; 
    short dataAxisY2AutomaticDivision; 
    short seriesAxisAutomaticDivision; 
    long dataAxisYManualDivision;  
    long dataAxisY2ManualDivision; 
    long seriesAxisManualDivision; 
    short dataAxisYAutoScale;       
    short dataAxisY2AutoScale;      
    short seriesAxisAutoScale;      
}  PEGraphAxisInfo;
#define PE_WORD_LEN           2
typedef struct PEValueInfo
{
    WORD StructSize;
    WORD valueType; 
    double viNumber;
    double viCurrency;
    BOOL viBoolean;
    char viString[PE_VI_STRING_LEN];
    short viDate[3]; 
    short viDateTime[6]; 
    short viTime[3];  
    COLORREF viColor;
    short viInteger;
    char viC; 
	char ignored; 
	long viLong;
} PEValueInfo;
BOOL  CRPE_API PESetParameterMinMaxValue (short printJob, 
                                          const char FAR * parameterFieldName,
                                          const char FAR * reportName,
                                          PEValueInfo FAR * valueMin, 
                                          PEValueInfo FAR * valueMax  
                                          );
#define PE_WORD_LEN          2
                                 BOOL ( CALLBACK * callbackProc )(short eventID, void *param, void *userData),
#else
                                 BOOL ( CALLBACK __export * callbackProc )(short eventID, void *param, void *userData),
#endif