Crystal 8/ProgramF/SEAGAT~1/CRW/DEV/include/global32.bas


Global Const PE_ERR_NOTENOUGHMEMORY = 500
Global Const PE_ERR_INVALIDJOBNO = 501
Global Const PE_ERR_INVALIDHANDLE = 502
Global Const PE_ERR_STRINGTOOLONG = 503
Global Const PE_ERR_NOSUCHREPORT = 504
Global Const PE_ERR_NODESTINATION = 505
Global Const PE_ERR_BADFILENUMBER = 506
Global Const PE_ERR_BADFILENAME = 507
Global Const PE_ERR_BADFIELDNUMBER = 508
Global Const PE_ERR_BADFIELDNAME = 509
Global Const PE_ERR_BADFORMULANAME = 510
Global Const PE_ERR_BADSORTDIRECTION = 511
Global Const PE_ERR_ENGINENOTOPEN = 512
Global Const PE_ERR_INVALIDPRINTER = 513
Global Const PE_ERR_PRINTFILEEXISTS = 514
Global Const PE_ERR_BADFORMULATEXT = 515
Global Const PE_ERR_BADGROUPSECTION = 516
Global Const PE_ERR_ENGINEBUSY = 517
Global Const PE_ERR_BADSECTION = 518
Global Const PE_ERR_NOPRINTWINDOW = 519
Global Const PE_ERR_JOBALREADYSTARTED = 520
Global Const PE_ERR_BADSUMMARYFIELD = 521
Global Const PE_ERR_NOTENOUGHSYSRES = 522
Global Const PE_ERR_BADGROUPCONDITION = 523
Global Const PE_ERR_JOBBUSY = 524
Global Const PE_ERR_BADREPORTFILE = 525
Global Const PE_ERR_NODEFAULTPRINTER = 526
Global Const PE_ERR_SQLSERVERERROR = 527
Global Const PE_ERR_BADLINENUMBER = 528
Global Const PE_ERR_DISKFULL = 529
Global Const PE_ERR_FILEERROR = 530
Global Const PE_ERR_INCORRECTPASSWORD = 531
Global Const PE_ERR_BADDATABASEDLL = 532
Global Const PE_ERR_BADDATABASEFILE = 533
Global Const PE_ERR_ERRORINDATABASEDLL = 534
Global Const PE_ERR_DATABASESESSION = 535
Global Const PE_ERR_DATABASELOGON = 536
Global Const PE_ERR_DATABASELOCATION = 537
Global Const PE_ERR_BADSTRUCTSIZE = 538
Global Const PE_ERR_BADDATE = 539
Global Const PE_ERR_BADEXPORTDLL = 540
Global Const PE_ERR_ERRORINEXPORTDLL = 541
Global Const PE_ERR_PREVATFIRSTPAGE = 542
Global Const PE_ERR_NEXTATLASTPAGE = 543
Global Const PE_ERR_CANNOTACCESSREPORT = 544
Global Const PE_ERR_USERCANCELLED = 545
Global Const PE_ERR_OLE2NOTLOADED = 546
Global Const PE_ERR_BADCROSSTABGROUP = 547
Global Const PE_ERR_NOCTSUMMARIZEDFIELD = 548
Global Const PE_ERR_DESTINATIONNOTEXPORT = 549
Global Const PE_ERR_INVALIDPAGENUMBER = 550
Global Const PE_ERR_NOTSTOREDPROCEDURE = 552
Global Const PE_ERR_INVALIDPARAMETER = 553
Global Const PE_ERR_GRAPHNOTFOUND = 554
Global Const PE_ERR_INVALIDGRAPHTYPE = 555
Global Const PE_ERR_INVALIDGRAPHDATA = 556
Global Const PE_ERR_CANNOTMOVEGRAPH = 557
Global Const PE_ERR_INVALIDGRAPHTEXT = 558
Global Const PE_ERR_INVALIDGRAPHOPT = 559

'New Error Codes For 5.0
Global Const PE_ERR_BADSECTIONHEIGHT = 560
Global Const PE_ERR_BADVALUETYPE = 561
Global Const PE_ERR_INVALIDSUBREPORTNAME = 562
Global Const PE_ERR_NOPARENTWINDOW = 564     'dialog parent window
Global Const PE_ERR_INVALIDZOOMFACTOR = 565  'zoom factor
Global Const PE_ERR_PAGESIZEOVERFLOW = 567
Global Const PE_ERR_LOWSYSTEMRESOURCES = 568
Global Const PE_ERR_BADGROUPNUMBER = 570
Global Const PE_ERR_INVALIDNEGATIVEVALUE = 572
Global Const PE_ERR_INVALIDMEMORYPOINTER = 573
Global Const PE_ERR_INVALIDPARAMETERNUMBER = 594
Global Const PE_ERR_SQLSERVERNOTOPENED = 599

Global Const PE_ERR_NOTIMPLEMENTED = 999

'new constants for 7.0
Global Const PE_ERR_INVALIDOBJECTFORMATNAME = 571
Global Const PE_ERR_INVALIDOBJECTTYPE = 574
Global Const PE_ERR_INVALIDGRAPHDATATYPE = 577
Global Const PE_ERR_INVALIDSUBREPORTLINKNUMBER = 582
Global Const PE_ERR_SUBREPORTLINKEXIST = 583
Global Const PE_ERR_BADROWCOLVALUE = 584
Global Const PE_ERR_INVALIDSUMMARYNUMBER = 585
Global Const PE_ERR_INVALIDGRAPHDATAFIELDNUMBER = 586
Global Const PE_ERR_INVALIDSUBREPORTNUMBER = 587
Global Const PE_ERR_INVALIDFIELDSCOPE = 588
Global Const PE_ERR_FIELDINUSE = 590
Global Const PE_ERR_INVALIDPAGEMARGINS = 595
Global Const PE_ERR_REPORTONSECUREQUERY = 596
Global Const PE_ERR_CANNOTOPENSECUREQUERY = 597
Global Const PE_ERR_INVALIDSECTIONNUMBER = 598
Global Const PE_ERR_TABLENAMEEXIST = 606
Global Const PE_ERR_INVALIDCURSOR = 607
Global Const PE_ERR_FIRSTPASSNOTFINISHED = 608
Global Const PE_ERR_CREATEDATASOURCE = 609
Global Const PE_ERR_CREATEDRILLDOWNPARAMETERS = 610
Global Const PE_ERR_CHECKFORDATASOURCECHANGES = 613
Global Const PE_ERR_STARTBACKGROUNDPROCESSING = 614
Global Const PE_ERR_SQLSERVERINUSE = 619
Global Const PE_ERR_GROUPSORTFIELDNOTSET = 620
Global Const PE_ERR_CANNOTSETSAVESUMMARIES = 621
Global Const PE_ERR_LOADOLAPDATABASEMANAGER = 622
Global Const PE_ERR_OPENOLAPCUBE = 623
Global Const PE_ERR_READOLAPCUBEDATA = 624
Global Const PE_ERR_CANNOTSAVEQUERY = 626
Global Const PE_ERR_CANNOTREADQUERYDATA = 627
Global Const PE_ERR_MAINREPORTFIELDLINKED = 629
Global Const PE_ERR_INVALIDMAPPINGTYPEVALUE = 630
Global Const PE_ERR_HITTESTFAILED = 636
Global Const PE_ERR_BADSQLEXPRESSIONNAME = 637        ' no SQL expression by the specified *name* exists in this report.
Global Const PE_ERR_BADSQLEXPRESSIONNUMBER = 638      ' no SQL expression by the specified *number* exists in this report.
Global Const PE_ERR_BADSQLEXPRESSIONTEXT = 639        ' not a valid SQL expression
Global Const PE_ERR_INVALIDDEFAULTVALUEINDEX = 641    ' invalid index for default value of a parameter.
Global Const PE_ERR_NOMINMAXVALUE = 642               ' the specified PE_PF_* type does not have min/max values.
Global Const PE_ERR_INCONSISTANTTYPES = 643           ' if both min and max values are specified in PESetParameterMinMaxValue,
                                                      ' the value types for the min and max must be the same.
Global Const PE_ERR_CANNOTLINKTABLES = 645
Global Const PE_ERR_CREATEROUTER = 646
Global Const PE_ERR_INVALIDFIELDINDEX = 647
Global Const PE_ERR_INVALIDGRAPHTITLETYPE = 648
Global Const PE_ERR_INVALIDGRAPHTITLEFONTTYPE = 649

'end new for 7.0 section

' new consts for 7.0, MR1
Global Const PE_ERR_PARAMTYPEDIFFERENT = 650 ' the type used in a add/set value API for a
                                             ' parameter differs with it's existing type.
Global Const PE_ERR_INCONSISTANTRANGETYPES = 651 ' the value type for both start & end range
                                                 ' values must be the same.
Global Const PE_ERR_RANGEORDISCRETE = 652       ' an operation was attempted on a discrete parameter that is
                                                ' only legal for range parameters or vice versa.

Global Const PE_ERR_NOTMAINREPORT = 654         ' an operation was attempted that is disallowed for subreports.

Global Const PE_ERR_INVALIDCURRENTVALUEINDEX = 655 ' invalid index for current value of a parameter.
Global Const PE_ERR_LINKEDPARAMVALUE = 656 ' operation illegal on linked parameter.

Global Const PE_ERR_INVALIDPARAMETERRANGEINFO = 672 ' Invalid PE_RI_* combination.

Global Const PE_ERR_INVALIDSORTMETHODINDEX = 674 ' Invalid sort method index.

Global Const PE_ERR_INVALIDGRAPHSUBTYPE = 675   ' Invalid PE_GST_* or
                                                ' PE_GST_* does not match PE_GT_* or
                                                ' PE_GST_* current graph type.
Global Const PE_ERR_BADGRAPHOPTIONINFO = 676    ' one of them members of PEGraphOptionInfo is out of range.
Global Const PE_ERR_BADGRAPHAXISINFO = 677      ' one of them members of PEGraphAxisInfo is out of range.

Global Const PE_ERR_NOTEXTERNALSUBREPORT = 680  ' the subreport is not imported.
Global Const PE_ERR_INVALIDPARAMETERVALUE = 687
Global Const PE_ERR_INVALIDFORMULASYNTAXTYPE = 688 ' specified formula syntax not in PE_FST_*
Global Const PE_ERR_INVALIDCROPVALUE = 689
Global Const PE_ERR_INVALIDCOLLATIONVALUE = 690
Global Const PE_ERR_STARTPAGEGREATERSTOPPAGE = 691
Global Const PE_ERR_INVALIDEXPORTFORMAT = 692

Global Const PE_ERR_OTHERERROR = 997
Global Const PE_ERR_INTERNALERROR = 998               ' programming error

'Constants using to calculate structure size constants
Global Const PE_BYTE_LEN = 1
Global Const PE_WORD_LEN = 2
Global Const PE_LONG_LEN = 4
Global Const PE_DOUBLE_LEN = 8

' Open, print and close report (used when no changes needed to report)
' --------------------------------------------------------------------

Declare Function PEPrintReport Lib "crpe32.dll" (ByVal RptName$, ByVal Printer%, ByVal Window%, ByVal Title$, ByVal Lft&, ByVal Top&, ByVal Wdth&, ByVal height&, ByVal style As Long, ByVal PWindow As Long) As Integer


' Open and close print engine
' ---------------------------

Declare Function PEOpenEngine Lib "crpe32.dll" () As Integer
Declare Sub PECloseEngine Lib "crpe32.dll" ()
Declare Function PECanCloseEngine Lib "crpe32.dll" () As Integer


' Get version info
' ----------------

Global Const PE_GV_DLL = 100      ' values for version parameter of PEGetVersion
Global Const PE_GV_ENGINE = 200

Declare Function PEGetVersion Lib "crpe32.dll" (ByVal version%) As Integer


' Open and close print job (i.e. report)
' --------------------------------------

Declare Function PEOpenPrintJob Lib "crpe32.dll" (ByVal RptName$) As Integer

Declare Function PEClosePrintJob Lib "crpe32.dll" (ByVal printJob%) As Integer


' Start and cancel print job (i.e. print the report, usually after changing report)
' ---------------------------------------------------------------------------------

Declare Function PEStartPrintJob Lib "crpe32.dll" (ByVal printJob%, ByVal WaitOrNot%) As Integer

Declare Sub PECancelPrintJob Lib "crpe32.dll" (ByVal printJob%)


' report options
'----------------
Global Const PE_RPTOPT_CVTDATETIMETOSTR = 0
Global Const PE_RPTOPT_CVTDATETIMETODATE = 1
Global Const PE_RPTOPT_KEEPDATETIMETYPE = 2

' Following are the valid values for promptMode
Global Const PE_RPTOPT_PROMPT_NONE = 0
Global Const PE_RPTOPT_PROMPT_NORMAL = 1
Global Const PE_RPTOPT_PROMPT_ALWAYS = 2

Type PEReportOptions
    StructSize As Integer                       'initialize to PE_SIZEOF_REPORT_OPTIONS
    saveDataWithReport As Integer               'BOOL value, except use PE_UNCHANGED for no change
    saveSummariesWithReport As Integer          'BOOL value, except use PE_UNCHANGED for no change
    useIndexForSpeed As Integer                 'BOOL value, except use PE_UNCHANGED for no change
    translateDOSStrings As Integer              'BOOL value, except use PE_UNCHANGED for no change
    translateDosMemos As Integer                'BOOL value, except use PE_UNCHANGED for no change
    convertDateTimeType As Integer              'a PE_RPTOPT_ value, except use PE_UNCHANGED for no change
    convertNullFieldToDefault As Integer        'BOOL value, except use PE_UNCHANGED for no change
    morePrintEngineErrorMessages As Integer     'BOOL value, except use PE_UNCHANGED for no change
    caseInsensitiveSQLData As Integer           'BOOL value, except use PE_UNCHANGED for no change
    verifyOnEveryPrint As Integer               'BOOL value, except use PE_UNCHAGED for no change
    zoomMode As Integer                         'a PE_ZOOM_ constant, except use PE_UNCHANGED for no change
    hasGroupTree As Integer                     'BOOL value, except use PE_UNCHANGED for no change
    dontGenerateDataForHiddenObjects As Integer ' BOOL value, except use PE_UNCHANGED for no change
    performGroupingOnServer As Integer          ' BOOL value, except use PE_UNCHANGED for no change
    doAsyncQuery As Integer                     ' BOOL value, except use PE_UNCHANGED for no change
    promptMode As Integer                       ' PE_RPTOPT_PROMPT_NONE, PE_RPTOPT_PROMPT_NORMAL, PE_RPTOPT_PROMPT_ALWAYS, use PE_UNCHANGED for no change
    SelectDistinctRecords As Integer            ' BOOL value, except use PE_UNCHANGED for no change
End Type

Global Const PE_SIZEOF_REPORT_OPTIONS = 18 * PE_WORD_LEN

Declare Function PEGetReportOptions Lib "crpe32.dll" (ByVal printJob%, reportOptions As PEReportOptions) As Integer

Declare Function PESetReportOptions Lib "crpe32.dll" (ByVal printJob%, reportOptions As PEReportOptions) As Integer


' Print job status
' ----------------
 
Declare Function PEIsPrintJobFinished Lib "crpe32.dll" (ByVal printJob%) As Integer
